# OpenPanels

./: .agent-file-deduplication.md  .agent-index.md  .agent-log.md  .gitignore  .mcp.json  .myopenpanels-log-task-fd7ee8dc.md  .task-ba967f86-index.md  .task-ba967f86-log.md  AGENTS.md  Cargo.toml  LICENSE  README.md  biome.jsonc  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
crates/myopenpanels/: Cargo.toml  build.rs
crates/myopenpanels/migrations/: 0001_initial.sql  0002_migration_registry.sql  0002_remove_poll_targets.sql  0003_canonical_content_authority.sql  0004_content_objects.sql  0005_storage_v2.sql  0006_asset_url_repair.sql  0006_same_project_relationships.sql  0007_project_json_repair.sql  0007_release_snapshots.sql  0008_stable_directory_keys.sql  0011_atomic_workflows.sql  0012_content_broker.sql  0013_remove_webhook_transport.sql  0014_model_gateway.sql  0015_task_channel_dispatch.sql  0016_model_gateway_channel_controls.sql  0017_preferred_task_dispatch.sql  0018_wiki_mutation_lanes.sql
crates/myopenpanels/src/: agent.rs  agent_control.rs  bridge.rs  canvas.rs  capabilities.rs  cli.rs  cli_identity.rs  content.rs  context_cleanup.rs  control.rs  error.rs  ids.rs  lib.rs  main.rs  model_gateway.rs  my_document.rs  operations.rs  panel.rs  paths.rs  publication.rs  publishing.rs  release.rs  selection.rs  server.rs  storage.rs  studio.rs  tasks.rs  trace.rs  types.rs  typesetting.rs  update.rs  wiki.rs  writing.rs
crates/myopenpanels/src/agent/: bootstrap.rs  device_skills.rs  procedures.rs  recommended_skills.rs  recommended_skills_tests.rs  skill_associations.rs  skill_import.rs  skill_management.rs  skill_management_tests.rs  skill_package_service_tests.rs  skill_parsing.rs  skill_registry.rs  skill_updates.rs  skills_context.rs  tests.rs  workflows.rs
crates/myopenpanels/src/bridge/: conversion_output.rs  document_prompts.rs  execution.rs  finalization.rs  publication_layout_output.rs  publication_prompts.rs  result_validation.rs  result_validation_tests.rs  status_process.rs  task_handlers.rs  typesetting_layout_output.rs  typesetting_prompts.rs  worker.rs  writing_wiki_prompts.rs
crates/myopenpanels/src/cli/: args.rs  registry.rs  runtime_agent_actions.rs  runtime_asset.rs  runtime_core.rs  runtime_my_document.rs  runtime_project_canvas.rs  runtime_publication.rs  runtime_publishing.rs  runtime_release.rs  support.rs  (+8 more)
crates/openpanels-local/: Cargo.toml  build.rs
crates/openpanels-local/src/: agent.rs  bridge.rs  canvas.rs  cli.rs  control.rs  error.rs  lib.rs  main.rs  operations.rs  paths.rs  selection.rs  server.rs  storage.rs  studio.rs  tasks.rs  trace.rs  types.rs  update.rs  wiki.rs
(+619 files in other folders)
