[package]
name = "myopenpanels"
version = "0.4.16"
edition = "2021"
license = "MIT"
default-run = "myopenpanels"

[lib]
name = "myopenpanels"
path = "src/lib.rs"

[[bin]]
name = "myopenpanels"
path = "src/main.rs"

[dependencies]
axum = "0.8.4"
flate2 = "1.1.5"
base64 = "0.22.1"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
clap = { version = "4.5.53", features = ["derive"] }
include_dir = "0.7.4"
libc = "0.2.186"
mime_guess = "2.0.5"
rand = "=0.9.2"
rusqlite = { version = "0.32.1", features = ["backup", "bundled"] }
self-replace = "1.5.0"
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml_ng = "0.10.0"
sha2 = "0.10.9"
tar = "0.4.44"
tempfile = "3.23.0"
thiserror = "2.0.18"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "net", "sync", "time"] }
tokio-stream = "0.1.17"
tower-http = { version = "0.6.7", features = ["cors"] }
ureq = { version = "2.12.1", features = ["json"] }
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }
